# within-rai-prototype

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  embeddings.py  main.py  models.py  vector_store.py
app/ingestion/: slack.py  transcript.py
app/retrieval/: rag.py
app/routes/: chat.py  ingest.py
data/synthetic/: generate_data.py  slack_messages.json  transcripts.json
frontend/: app.py
