[project]
name = "within-rai-prototype"
version = "0.1.0"
description = "RAG pipeline demo: call transcripts + Slack as knowledge sources with hybrid search and client-level filtering"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "qdrant-client==1.12.1",
    "FlagEmbedding==1.3.3",
    "anthropic==0.40.0",
    "pydantic-settings==2.7.0",
    "streamlit==1.41.1",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
]

[tool.uv]
override-dependencies = [
    "tokenizers>=0.21.0",
    "transformers>=4.47.0",
]
